Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-30493

onChanged signal is not emitted for alias properties

XMLWordPrintable

    • 55b5e30901cd2616d729c61856dabe3bfda5e4f0

      I'm attaching a test case that shows how the changed signal of an alias property is not being emited while the changed signal for a property that is a binding is emitted.

      You can see that the test succeeds if you change "bar" from being an alias to a real

      Also happens in the stable branch of qtdeclarative (5.1) as of today.

        1. tst_changed_signals.qml
          1 kB
          Albert Astals Cid (Canonical)
        2. test.qml
          0.8 kB
          Shawn Rutledge
        For Gerrit Dashboard: QTBUG-30493
        # Subject Branch Project Status CR V

            shausman Simon Hausmann
            tsdgeos_canonical Albert Astals Cid (Canonical) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes